tests/common/snapshots/yaffs2__common__tests__yaffs2.rs-7-5_file_map.snap
---
source: tests/common/mod.rs
expression: results.file_map
---
- offset: 0
  id: "[uuid]"
  size: 126720
  name: yaffs
  confidence: 128
  description: "YAFFSv2 filesystem, Little Endian, page size: 2048, spare size: 64, image size: 126720 bytes"
  always_display: false
  extraction_declined: false
