tests/common/snapshots/yaffs2__common__tests__yaffs2.rs-7-5_ordered_extractions.snap
---
source: tests/common/mod.rs
expression: ordered_extractions
---
- size: 126720
  success: true
  extractor: yaffs_built_in
  do_not_recurse: false
  output_directory: "[output_directory]"
